# gba-rust

./: .gitignore  Cargo.toml  README.md  build.sh  run_local.sh
src/: base.rs  gba.rs  lib.rs
windows/: build-release.bat
