[package]
name = "gba-snake"
version = "0.1.0"
authors = ["dennis.ranke@gmail.com"]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[lib]
crate-type = ["staticlib"]

#[dependencies]
#ux = "0.1.3"
#rand = "0.7"

[dependencies.ux]
version = "0.1.3"
default-features = false


#[dependencies.rand]
#version = "0.7"
#default-features = false
